k8s/containers/hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - command:
        - 'python3'
        - 'app.py'
        name: hello-world
        image: hello-local:latest
        ports:
        - containerPort: 5000
        imagePullPolicy: IfNotPresent
